resource-files/librechat/librechat-dhi-mongo-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: librechat-mongo-allow-all
  namespace: librechat
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mongodb
      app.kubernetes.io/instance: librechat
      app.kubernetes.io/name: mongodb
  ingress:
    - ports:
        - protocol: TCP
          port: 27017
  policyTypes:
    - Ingress
